# auth-app-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 15acd513560e_.py  18682ef774e1_.py
src/: dao.py  database.py  main.py  services.py  settings.py
src/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  security.py  services.py  utils.py
